<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Call Control</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_preference">Preference</string>
    <string name="title_activity_busquedas">Searches</string>
    <string name="title_activity_resultados">Results</string>
    <string name="title_activity_graficas">Charts</string>
    <string name="title_activity_acerca_de">About</string>
    <string name="texto_acerca_de">Call Control is an application that will serve to keep track of the incoming and outgoing calls you make, know how many calls performed per month, which contacts call you more often, what contact calls more times, etc.
         \n\nCall Control can also be configured with a maximum of minutes per month to be alerted
     through notifications when the number of minutes of calls made to approach the maximum established. \nThese minutes are provided by the phone's call log
     itself and may differ from the number of minutes billed by your mobile operator.</string>
    <string name="desconocido">Unknown</string>
    <string name="numero_abreviado">Nº:</string>
    <string name="fecha">Date</string>
    <string name="numero">Number</string>
    <string name="de_fecha">From date</string>
    <string name="a_fecha">To date</string>
    <string name="tiempo">time</string>
    <string name="ciclo_facturacion">Billing cycle</string>
    <string name="tipo">tipy</string>
    <string name="ciclo">Cycle</string>
    <string name="contacto">Contact</string>
    <string name="todos">All</string>
    <string name="tipo_de_llamada">Call type</string>
    <string name="tiempo_consumido">Time consumed</string>
    <string name="recibidas">Incoming</string>
    <string name="realizadas">Outgoing</string>
    <string name="minutos">Minutes</string>
    <string name="perdidas">Missed</string>
    <string name="minutos_por_llamada">Minutes per call</string>
    <string name="de">From</string>
    <string name="a">to</string>
    <string name="al_espacios">" to the "</string>
    <string name="llamadas">Calls</string>
    <string name="minutos_m">minutes</string>
    <string name="zero">0</string>
    <string name="tiempo_en_llamadas_realizadas">Outgoing call time</string>
    <string name="tiempo_en_llamadas_recibidas">Incoming call time</string>
    <string name="zero_horas_zero_minutos">00:00:00</string>
    <string name="contacto_con_mas_llamadas_recibidas">Contact with more incoming calls</string>
    <string name="contacto_con_mas_llamadas_realizadas">Contact with more outgoing calls</string>
    <string name="contacto_con_el_que_mas_rato_hablas">Contact with whom you speak more</string>
    <string name="contacto_con_la_llamada_mas_larga">Contact with the longest call</string>
    <string name="mensaje_notificacion_llegando_limite">You are about to exceed its limit of minutes</string>
    <string name="mensaje_notificacion_limite_superado">You have exceeded your limit of minutes</string>
    <string name="minutos_en_llamadas_realizadas">Minutes of outgoing calls</string>
    <string name="minutos_en_llamadas_recibidas">Minutes of incoming calls</string>
    <string name="numero_de_llamadas_realizadas">Number of outgoing calls</string>
    <string name="ningun_contacto">No contact</string>
    <string name="de_espacios">" of "</string>
    <string name="m_espacio">" m"</string>
    <string name="llamada_espacio">" call"</string>
    <string name="llamadas_espacio">" calls"</string>
    <string name="llamada_en_total_espacio">" total call"</string>
    <string name="llamadas_en_total_espacio">" total calls"</string>
    <string name="en_total_espacio">"  in total"</string>
    <string name="una_llamada_encontrada">1 call found</string>
    <string name="llamadas_encontradas_espacio">" calls found"</string>
    <string name="contactos">Contacts</string>
    <string name="ok">OK</string>
    <string name="cancelar">CANCEL</string>
    <string name="consumo_en_minutos">Consumption in minutes</string>
    <string name="del_espacio">"from "</string>
    <string name="llamada_entrante">Incoming call</string>
    <string name="llamada_saliente">Outgoing call</string>
    <string name="llamada_perdida">Missed call</string>
    <string name="bienvenido">Welcome!</string>
    <string name="mensaje_bienvenida">Fill preferences to send notifications when about to reach the limit of minutes per month</string>
    <string name="top_cinco_contactos">Top 5 Contacts that you've been calling more (anually)</string>
    <string name="Enero">January</string>
    <string name="Febrero">February</string>
    <string name="Marzo">March</string>
    <string name="Abril">April</string>
    <string name="Mayo">May</string>
    <string name="Junio">June</string>
    <string name="Julio">July</string>
    <string name="Agosto">August</string>
    <string name="Septiembre">Septiember</string>
    <string name="Octubre">October</string>
    <string name="Noviembre">November</string>
    <string name="Diciembre">December</string>
    <string name="Enero_abreviado">Jan.</string>
    <string name="Febrero_abreviado">Feb.</string>
    <string name="Marzo_abreviado">Mar.</string>
    <string name="Abril_abreviado">Apr.</string>
    <string name="Mayo_abreviado">May.</string>
    <string name="Junio_abreviado">Jun.</string>
    <string name="Julio_abreviado">Jul.</string>
    <string name="Agosto_abreviado">Agu.</string>
    <string name="Septiembre_abreviado">Sep.</string>
    <string name="Octubre_abreviado">Oct.</string>
    <string name="Noviembre_abreviado">Nov.</string>
    <string name="Diciembre_abreviado">Des.</string>
    <string name="preferencias_dia_ciclo_summary">Choose the day that each cycle begins</string>
    <string name="preferencias_dia_ciclo_titulo">Day billing cycle</string>
    <string name="preferencias_enviar_notif_summary">Choose whether you want the app will send notifications</string>
    <string name="preferencias_enviar_notif_titulo">Send notifications</string>
    <string name="preferencias_limite_minutos_summary">Defines the boundary of minutes you have hired a month</string>
    <string name="preferencias_limite_minutos_titulo">Limit minutes per month</string>
    <string name="preferencias_limite_minutos_dialog">Minutes</string>
    <string name="preferencias_limite_minutos_aviso_summary">Sets the minutes when you want to be notified</string>
    <string name="preferencias_limite_minutos_aviso_titulo">Notice minute limit</string>
    <string name="preferencias_limite_minutos_aviso_dialog">Minutes</string>


</resources>
