<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
            <EditTextPreference
                android:key="PREF_DIA_CICLO"
                android:summary="Elija el día en el que empezará cada ciclo"
                android:title="Día ciclo"
                android:inputType="number"/>

                <EditTextPreference
                android:key="PREF_LIMITE_MINUTOS"
                android:summary="Defina el límite de minutos que tiene contratado al mes"
                android:title="Límite minutos al mes"
                android:inputType="number"/>

                <EditTextPreference
                    android:key="PREF_AVISO_LIMITE_MINUTOS"
                    android:summary="Defina los minutos a partir de cuando quiere que se le notifique que se acerca al límite"
                    android:title="Aviso límite minutos"
                    android:inputType="number"/>
            -->

    <com.dsole.controldellamadas.classes.NumberPickerDiaCicloPreference
        android:key="PREF_DIA_CICLO"
        android:summary="@string/preferencias_dia_ciclo_summary"
        android:title="@string/preferencias_dia_ciclo_titulo"/>

    <CheckBoxPreference
        android:key="PREF_ENVIAR_NOTIFICACIONES"
        android:summary="@string/preferencias_enviar_notif_summary"
        android:title="@string/preferencias_enviar_notif_titulo"
        android:defaultValue="true"/>

    <com.dsole.controldellamadas.classes.NumberPickerLimiteMinutosPreference
        android:key="PREF_LIMITE_MINUTOS"
        android:summary="@string/preferencias_limite_minutos_summary"
        android:title="@string/preferencias_limite_minutos_titulo"
        android:dialogMessage="@string/preferencias_limite_minutos_dialog" />

    <com.dsole.controldellamadas.classes.NumberPickerAvisoMinutosPreference
        android:key="PREF_AVISO_LIMITE_MINUTOS"
        android:summary="@string/preferencias_limite_minutos_aviso_summary"
        android:title="@string/preferencias_limite_minutos_aviso_titulo"
        android:dialogMessage="@string/preferencias_limite_minutos_aviso_dialog"
        />

</PreferenceScreen>